tests/invalid/Type_Invalid_9.whiley
type Other is Contractive
type Contractive is Other | Other